# AXIOM

./: .gitignore  .replit  AXIOM_WHITEPAPER_AUDIT.md  Cargo.toml  LICENSE  README.md
.agents/: agent_assets_metadata.toml
.agents/memory/: MEMORY.md  axiom-api-surface.md  axiom-audit-findings.md  axiom-bzkp.md  axiom-overview.md
attached_assets/: Axiom_1780124651926.docx
axiom-akashic/: Cargo.toml
axiom-akashic/.sqlx/: .gitkeep
axiom-akashic/src/: akashic.rs  cache.rs  grpc.rs  lib.rs  schema.rs
axiom-asm/arm64/: bis_handler.s
axiom-asm/x86_64/: bis_handler.asm
axiom-c/: CMakeLists.txt
axiom-c/include/: axiom_minimal.h  blake3_minimal.h
axiom-c/src/: axiom_minimal.c  blake3_minimal.c
axiom-coherence/: requirements.txt  server.py
axiom-coherence/axiom_coherence/: __init__.py  __main__.py  beo_resolver.py  engine.py  models.py  planes.py
axiom-coherence/tests/: conftest.py  test_coherence.py  test_planes.py
axiom-core/: Cargo.toml
axiom-core/src/: lib.rs  types.rs
axiom-core/src/l0/: attestation.rs  entropy.rs  mod.rs
axiom-core/src/l1/: mod.rs  ubh.rs
axiom-core/src/l2/: beo.rs  bpi.rs  mod.rs  odi.rs
axiom-core/src/l5/: bfs.rs  bis.rs  ikp.rs  kernel.rs  lbp.rs  mod.rs  scheduler.rs
axiom-integration/: Cargo.toml
axiom-integration/src/: main.rs  stress.rs  stress_main.rs
axiom-rcp/: go.mod  go.sum  main.go
axiom-rcp/rcp/: daemon.go  daemon_test.go  grpc.go  stress_test.go
cairo/: Scarb.toml
cairo/src/: behavioral_proof.cairo  depth_proof.cairo  identity_proof.cairo
circuits/: Nargo.toml
circuits/src/: coherence_check.nr  main.nr  temporal_cluster.nr
contracts/: hardhat.config.ts  package.json
contracts/contracts/: AkashicProof.sol  BehavioralIdentity.sol  BehavioralZKVerifier.sol  ImmunityRegistry.sol  TRIONOracleV4.sol
dashboard/: bzkp_simulator.js  package-lock.json  package.json  server.js
dashboard/public/: index.html
docker/: docker-compose.yml
docker/coherence/: Dockerfile
docker/validator/: Dockerfile
docs/: architecture.md  getting_started.md  inventions.md
proto/: bis_interrupt.proto  cdbi.proto  coherence.proto  rcp_packet.proto  ubh.proto
sdk/: package.json  tsconfig.json
sdk/src/: cdbi.ts  client.ts  hooks.ts  index.ts  types.ts
sql/: akashic_schema.sql
sql/migrations/: 001_initial.sql
tests/: e2e_test.sh
