[workspace]
members = [
    "axiom-core",
    "axiom-akashic",
    "axiom-integration",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Hudu Yusuf (Analys) <analys@trionprotocol.io>"]
license = "CC0-1.0"
description = "AXIOM — Adaptive eXpressive Intelligence Ontological Matrix"
repository = "https://github.com/dev-analyshd/AXIOM"
keywords = ["behavioral-computing", "distributed-systems", "identity", "security"]
categories = ["cryptography", "network-programming", "os"]

[workspace.dependencies]
blake3 = "1.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "uuid", "chrono"] }
redis = { version = "0.24", features = ["tokio-comp"] }
tonic = "0.11"
prost = "0.12"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1"
anyhow = "1"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.9"
ordered-float = "4"
hex = "0.4"
sha2 = "0.10"
rand = "0.8"
bytes = "1"
merkle_light = "0.4"
