[package]
name = "axiom-integration"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "AXIOM end-to-end integration tests — all 7 layers"

[[bin]]
name = "axiom-integration"
path = "src/main.rs"

[dependencies]
axiom-core = { path = "../axiom-core" }
blake3 = { workspace = true }
serde_json = { workspace = true }
